--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MaxFit</title>
+
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="container">
+            <h1>MaxFit</h1>
+        </nav>
+        <nav>
+            <h2>@maxfit</h2>
+            <img src="img/insta_.png" alt="insta_">
+        </nav>
+    </header>
+    <section id="espaco">
+        <nav class="container">
+            <h3>Conheça nosso espaço</h3>
+        </nav>
+        <main>
+    </section>
+
+    <section id="fitness">
+        <div class="container">
+            <div class="fit-card">
+                <div class="card-description">
+                    <h3>Espaço fitness</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit impedit
+                        distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
+                        ducimus quidem at dolor dolorum nulla ex temporibus!</p>
+                </div>
+            </div>
+
+    </section>
+
+    <section id="modalidades">
+
+    </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
