--- a/index.html
+++ b/index.html
@@ -9,43 +9,48 @@
 
     <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>
     <header>
         <nav class="container">
-            <h1>MaxFit</h1>
-        </nav>
-        <nav>
-            <h2>@maxfit</h2>
-            <img src="img/insta_.png" alt="insta_">
+            <h1>MaxFit</h>
+                <div>
+                    <h2>@maxfit</h2>
+                    <img src="img/insta_.png" alt="insta"/>
+                </div>
         </nav>
     </header>
-    <section id="espaco">
-        <nav class="container">
-            <h3>Conheça nosso espaço</h3>
-        </nav>
-        <main>
-    </section>
-
-    <section id="fitness">
-        <div class="container">
-            <div class="fit-card">
-                <div class="card-description">
-                    <h3>Espaço fitness</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit impedit
-                        distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
-                        ducimus quidem at dolor dolorum nulla ex temporibus!</p>
+    <main>
+        <section class="container">
+            <nav>
+                <h3>Conheça nosso espaço</h3>
+            </nav>
+            <main>
+        </section>
+        <section class="container">
+            <div>
+                <div class="fit-card">
+                    <div class="card-description">
+                        <h3>Espaço fitness</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit impedit
+                            distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
+                            ducimus quidem at dolor dolorum nulla ex temporibus!</p>
+                    </div>
+                    <div class="fit-card">
+                        <div class="card-description">
+                            <h3>Espaço fitness</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit
+                                impedit
+                                distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut
+                                eligendi
+                                ducimus quidem at dolor dolorum nulla ex temporibus!</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-
-    </section>
-
-    <section id="modalidades">
-
-    </section>
+        </section>
+        <section id="modalidades">
+        </section>
     </main>
     <footer>
-
     </footer>
 </body>
 
