--- a/index.html
+++ b/index.html
@@ -9,45 +9,45 @@
 
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <header>
         <nav class="container">
-            <h1>MaxFit</h>
-                <div>
-                    <h2>@maxfit</h2>
-                    <img src="img/insta_.png" alt="insta"/>
-                </div>
+            <h1>MaxFit</h1>
+            <div class="flex1">
+                <img src="img/insta_.png" alt="insta" />
+                <a href="#">@maxfit</a>
+            </div>
         </nav>
     </header>
     <main>
-        <section class="container">
-            <nav>
-                <h3>Conheça nosso espaço</h3>
-            </nav>
-            <main>
-        </section>
-        <section class="container">
-            <div>
-                <div class="fit-card">
-                    <div class="card-description">
-                        <h3>Espaço fitness</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit impedit
-                            distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
-                            ducimus quidem at dolor dolorum nulla ex temporibus!</p>
-                    </div>
-                    <div class="fit-card">
-                        <div class="card-description">
-                            <h3>Espaço fitness</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit
-                                impedit
-                                distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut
-                                eligendi
-                                ducimus quidem at dolor dolorum nulla ex temporibus!</p>
-                        </div>
-                    </div>
+        <section id="space">
+            <div class="container">
+                <h2>Conheça nosso espaço</h2>
+                <div class="card-space">
+                    <h3>Espaco fitness</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit impedit
+                        distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
+                        ducimus quidem at dolor dolorum nulla ex temporibus!</p>
                 </div>
+                <div class="card-space">
+                    <h3>Espaco fitness</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit impedit
+                        distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
+                        ducimus quidem at dolor dolorum nulla ex temporibus!</p>
+                </div>
+            </div>
         </section>
-        <section id="modalidades">
+        <section id="modality">
+            <div class="container">
+                <h4>Modalidades</h4>
+                <div class="card-mod">
+                    <h5>Jiu Jitsu</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit impedit
+                        distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
+                        ducimus quidem at dolor dolorum nulla ex temporibus!</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
