--- a/index.html
+++ b/index.html
@@ -47,10 +47,54 @@
                         distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
                         ducimus quidem at dolor dolorum nulla ex temporibus!</p>
                 </div>
+                <div class="card-mod">
+                    <h3>Zumba</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit impedit
+                        distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
+                        ducimus quidem at dolor dolorum nulla ex temporibus!</p>
+                </div>
+                <div class="card-mod">
+                    <h3>Karate</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit impedit
+                        distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
+                        ducimus quidem at dolor dolorum nulla ex temporibus!</p>
+                </div>
+                <div class="card-mod">
+                    <h3>Box</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit impedit
+                        distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
+                        ducimus quidem at dolor dolorum nulla ex temporibus!</p>
+                </div>
+                <div class="card-mod">
+                    <h3>Pilates</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit impedit
+                        distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
+                        ducimus quidem at dolor dolorum nulla ex temporibus!</p>
+                </div>
+                <div class="card-mod">
+                    <h3>Musculação</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur odit impedit
+                        distinctio magnam. Iure obcaecati dignissimos voluptatibus, doloremque, magnam aut eligendi
+                        ducimus quidem at dolor dolorum nulla ex temporibus!</p>
+                </div>
             </div>
         </section>
     </main>
     <footer>
+        <div class="social">
+            <div class="container-social">
+              <img src="./img/insta_.png" alt="instagram"/>
+              <a href="#">@MixFit</a>
+            </div>
+            <div class="container-social">
+                <img src="./img/image 2.png" alt="Tw"/>
+                <a href="#">/MixFit/</a>
+              </div>
+              <div class="container-end" >
+                <p>Todos os direitos reservado.</p>
+                <address>Rua da Pipoca, 150</address>
+              </div>
+            
     </footer>
 </body>
 
